[package]
name = "mtinit"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
colog = "1.3.0"
serde = {version = "1.0.213", default-features = false, features = ["derive"]}
serde_yaml = "0.9.34+deprecated"
clap = {version = "4.5.20", features = ["derive"]}
rustix = { version = "0.38.37", features = ["mount"] }
